--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
-
-<body>
-<h1>Blog Home Heading</h1>
-<p>First paragraph</p>
-</body>
-
+    <head>
+        {% if title %}
+            <title>Django Project - {{ title }}</title>
+        {% else %}
+            <title>Django Project</title>
+        {% endif %}
+    </head>
+    <body>
+        {% for post in posts %}
+            <h1>{{ post.title }}</h1>
+            <p>By {{ post.author }} on {{ post.date_posted }}</p>
+        {% endfor %}
+    </body>
 </html>
