--- a/django_project/blog/templates/blog/about.html
+++ b/django_project/blog/templates/blog/about.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-
-<body>
-<h1>About Page</h1>
-<p>First paragraph</p>
-</body>
-
-</html>
+{% extends "blog/base.html" %}
+{% block content %}
+    <h1>About Page</h1>
+{% endblock content %}
