--- a/django_project/blog/templates/blog/home.html
+++ b/django_project/blog/templates/blog/home.html
@@ -1,16 +1,7 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        {% if title %}
-            <title>Django Project - {{ title }}</title>
-        {% else %}
-            <title>Django Project</title>
-        {% endif %}
-    </head>
-    <body>
-        {% for post in posts %}
-            <h1>{{ post.title }}</h1>
-            <p>By {{ post.author }} on {{ post.date_posted }}</p>
-        {% endfor %}
-    </body>
-</html>
+{% extends "blog/base.html" %}
+{% block content %}
+    {% for post in posts %}
+        <h1>{{ post.title }}</h1>
+        <p>By {{ post.author }} on {{ post.date_posted }}</p>
+    {% endfor %}
+{% endblock content %}
